--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -70,6 +70,14 @@
 
 @media screen and (max-width: 560px) {
     .home {
-        font-size: 15px;
+        font-size: 10px;
+        padding: 3em 1em 0;
+        overflow-x: hidden;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .home {
+        font-size: 8px;
     }
 }
