--- a/src/components/Projects/ProjectCard/projectCard.css
+++ b/src/components/Projects/ProjectCard/projectCard.css
@@ -95,3 +95,9 @@
         font-size: 12px;
     }
 }
+
+@media screen and (max-width: 300px) {
+    .project-card {
+        width: 18em;
+    }
+}
